# openmp-sampsharp-x64-poc

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Directory.build.props  LICENSE  README.md  SampSharp.sln  SampSharp.sln.DotSettings  build.cmd  build.sh  interface.hpp  main.cpp  managed-host.cpp  managed-host.hpp  proxies.cpp  sampsharp-component.cpp  sampsharp-component.hpp  testing.cpp
managed/SashManaged/: SashManaged.sln.DotSettings
managed/SashManaged/SashManaged/: BaseEventHandler.cs  BlittableBoolean.cs  BlittableStructRef.cs  BooleanMarshaller.cs  Class1.cs  IPointer.cs  Interop.cs  MarshallAttribute.cs  OpenMpAiTestCode.cs  OpenMpApiAttribute.cs  OpenMpApiMarshall.cs  OpenMpEventDispatcherAttribute.cs  OpenMpEventHandlerAttribute.cs  OpenMpEventHandlerTestCode.cs  SashManaged.csproj  SashManaged.csproj.DotSettings  StringViewMarshaller.cs  TypesForTestingCodeGen.cs
managed/SashManaged/SashManaged.SourceGenerator/: AttributeFactory.cs  Class1.cs  Common.cs  Constants.cs  MarshallingCodeGenDocumentation.cs  MarshallingCodeGenerator.cs  MethodStubGenerationContext.cs  NumberedTypeSourceGenerator.cs  OpenMpApiCodeGen.cs  OpenMpApiCodeGenV2.cs  OpenMpApiSourceGenerator.cs  OpenMpEventHandlerCodeGen.cs  OpenMpEventHandlerCodeGenV2.cs  OpenMpEventHandlerSourceGenerator.cs  OpenMpHybridStringGeneratorCodeGen.cs  ParameterStubGenerationContext.cs  SashManaged.SourceGenerator.csproj  StringUtil.cs  StructStubGenerationContext.cs  SymbolExtensions.cs  WellKnownMarshallerTypes.cs
src/Benchmarks/: Benchmarks.csproj  BoxingBenchmark.cs  Program.cs
src/SampSharp.Analyzer/: AnalyzerReleases.Unshipped.md  Analyzers.cs  Constants.cs  ExtensionAttributeAnalyzer.cs  SASH0001ExtensionAttributeAnalyzer.cs  SASH0002EventHandlerWithGenericParametersAnalyzer.cs  SASH0003ApiStructMustBePartialAnalyzer.cs  SampSharp.Analyzer.csproj  Sash0004ApiStructMethodMarshalRefReturnNotSupportedAnalyzer.cs  SemanticModelExtensions.cs
src/SampSharp.CodeFixes/: ExtensionAttributeCodeFixProvider.cs  SampSharp.CodeFixes.csproj  Sash0001ExtensionAttributeCodeFixProvider.cs  Sash0003MakeStructPartialCodeFixProvider.cs  Sash0005AllowUnsafeBlocksCodeFixProvider.cs
src/SampSharp.OpenMp.Core/: ExceptionHandler.cs  IPointer.cs  IStartup.cs  IStartupContext.cs  Interop.cs  LaunchInstructions.cs  OpenMpAiTestCode.cs  OpenMpApiTestCode.cs  OpenMpEventHandlerTestCode.cs  Pointer.cs  SampSharp.OpenMp.Core.csproj  SampSharp.OpenMp.Core.csproj.DotSettings  SampSharpExceptionHandler.cs  SampSharpInfo.cs  SampSharpInitParams.cs  StartupContext.cs  StructPointer.cs
src/SampSharp.OpenMp.Core/Api/: Colour.cs  GTAQuat.cs  (+11 more)
src/SampSharp.OpenMp.Entities/: AssemblyAttributes.cs  EcsApplicationBuilder.cs  EcsBuilder.cs  EcsBuilderUseMiddlewareExtensions.cs  EcsConfiguration.cs  EcsConfigurator.cs  EcsHost.cs  EcsHostBuilder.cs  EcsManager.cs  IEcsApplicationBuilder.cs  IEcsBuilder.cs  IEcsHostBuilder.cs  IEcsStartup.cs  OpenMp.cs  RuntimeInformation.cs  SampSharp.OpenMp.Entities.csproj  SampSharp.OpenMp.Entities.csproj.DotSettings  SampSharpEnvironment.cs  ServiceBuilderExtension.cs  ServiceCollectionExtensions.cs  StartupContextEcsExtensions.cs  StartupContextExtensions.cs  TickingSystem.cs  UnhandledExceptionHandler.cs
src/SampSharp.OpenMp.Entities.Commands/: EcsBuilderCommandsExtensions.cs  SampSharp.OpenMp.Entities.Commands.csproj
src/SampSharp.Sdk/: SampSharp.Sdk.csproj
src/SampSharp.SourceGenerator/: Constants.cs  FullyQualifiedTypeRewriter.cs  SampSharp.SourceGenerator.csproj
src/TestMode.OpenMp.Core/: FooBar.cs  Startup.cs  TestMode.OpenMp.Core.csproj
src/TestMode.OpenMp.Entities/: BasicsSystem.cs  MyFirstSystem.cs  RotationTesting.cs  Startup.cs  TestMode.OpenMp.Entities.csproj  TestTicker.cs
src/TestMode.UnitTests/: ActorTests.cs  GangZoneTests.cs  GlobalObjectTests.cs  MenuTest.cs  PickupTests.cs  PlayerObjectTests.cs  PlayerTests.cs  PlayerTextDrawTests.cs  PlayerTextLabelTests.cs  ServerServiceTests.cs  TestMode.UnitTests.csproj  TestMode.UnitTests.csproj.DotSettings  TextDrawTests.cs  TextLabelTests.cs  VehicleTests.cs
src/sampsharp-component/: CMakeLists.txt  compat.hpp  crash-handler.cpp  crash-handler.hpp  managed-host.cpp  managed-host.hpp  proxies.cpp  proxy-api.hpp  sampsharp-component.cpp  sampsharp-component.hpp
src/sampsharp-component/proxies/: api.cpp  event-dispatcher.cpp  extension.cpp  pool-event-handler.cpp  pool.cpp  robin-hood.cpp
(+885 files in other folders)
